# Luxury-car-shop

./: .env  README.md  docker-composer.yml  dockerfile  luxury.db  main.py  pyproject.toml  requirements.txt
app/: app.py  luxury.db  orm.py
app/auth/: jwt.py
app/models/: Budget.py  Car.py  Purchase.py  User.py  __init__.py
app/routers/: budget.py  cars.py  purchases.py  users.py
app/schemas/: car_schemas.py  deposit_schemas.py  purchase_schemas.py
app/services/: budget_service.py  email.py
tests/: budget_tests.py  cars_tests.py  purchase_tests.py  users_tests.py
